// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`VideoService round trip > reads a fully populated TV note 1`] = `
{
  "activePartId": "season-2",
  "actors": "Adam Scott, Britt Lower",
  "author": [
    "Dan Erickson",
  ],
  "communityRating": 87,
  "communityRatingProvider": "TMDB",
  "communityVotes": 3100,
  "count": 1,
  "description": "Work life balance, literally.",
  "displayName": "Severance",
  "episodeCurrent": 4,
  "episodeTotal": 10,
  "favorite": true,
  "filePath": "Library/Severance.md",
  "finished": "2022-04-08",
  "genres": [
    "drama",
    "mystery",
  ],
  "hasCustomPoster": true,
  "horizontalImageUrl": "https://cdn.example/severance-wide.jpg",
  "imageUrl": "https://cdn.example/severance.jpg",
  "integrationId": "95396",
  "integrationProvider": "tmdb",
  "nameLower": "severance",
  "networks": [
    "Apple TV",
  ],
  "owned": "digital",
  "parts": [
    {
      "episodeCurrent": 9,
      "episodeTotal": 9,
      "id": "season-1",
      "kind": "season",
      "seasonNumber": 1,
      "status": "completed",
      "title": "Season 1",
    },
    {
      "episodeCurrent": 4,
      "episodeTotal": 10,
      "id": "season-2",
      "kind": "season",
      "seasonNumber": 2,
      "status": "watching",
      "title": "Season 2",
    },
  ],
  "poster": "https://cdn.example/severance.jpg",
  "rating": "8.7",
  "rawFields": {
    "author": [
      "Dan Erickson",
    ],
    "cast": [
      "Adam Scott",
      "Britt Lower",
    ],
    "community-rating": 87,
    "community-rating-provider": "TMDB",
    "community-votes": 3100,
    "count": 1,
    "episode-current": 4,
    "episodes": 10,
    "favorite": true,
    "finished": "2022-04-08",
    "genres": [
      "Drama",
      "Mystery",
    ],
    "integration-id": "95396",
    "integration-provider": "tmdb",
    "networks": [
      "Apple TV",
    ],
    "owned": "digital",
    "poster": "https://cdn.example/severance.jpg",
    "poster-b": "https://cdn.example/severance-wide.jpg",
    "rating": 8.7,
    "released": "2022-02-18",
    "repeatable": true,
    "runtime": "55 min",
    "season-current": 2,
    "season-id-current": "season-2",
    "seasons": 2,
    "started": "2022-03-01",
    "status": "watching",
    "synopsis": "Work life balance, literally.",
    "tags": [
      "rewatch",
    ],
    "title": "Severance",
    "type": "tv",
    "url": "https://www.themoviedb.org/tv/95396",
    "user-rating": 7,
    "year": 2022,
  },
  "relatedMedia": [
    {
      "path": "Library/Dune.md",
      "title": "Dune",
      "type": "book",
    },
  ],
  "releaseDate": "2022-02-18",
  "repeatable": true,
  "runtime": "55 min",
  "seasons": 2,
  "sourceUrl": "https://www.themoviedb.org/tv/95396",
  "started": "2022-03-01",
  "status": "watching",
  "summary": "Work life balance, literally.",
  "tags": [
    "rewatch",
  ],
  "type": "tv",
  "userRating": 7,
  "year": 2022,
}
`;

exports[`VideoService round trip > reads a fully populated movie note 1`] = `
{
  "activePartId": null,
  "actors": "Adam Scott, Britt Lower",
  "author": [
    "Dan Erickson",
  ],
  "communityRating": 87,
  "communityRatingProvider": "TMDB",
  "communityVotes": 3100,
  "count": 1,
  "description": "Work life balance, literally.",
  "displayName": "Severance",
  "favorite": true,
  "filePath": "Library/Severance.md",
  "finished": "2022-04-08",
  "genres": [
    "drama",
    "mystery",
  ],
  "hasCustomPoster": true,
  "horizontalImageUrl": "https://cdn.example/severance-wide.jpg",
  "imageUrl": "https://cdn.example/severance.jpg",
  "integrationId": "95396",
  "integrationProvider": "tmdb",
  "nameLower": "severance",
  "owned": "digital",
  "parts": [],
  "poster": "https://cdn.example/severance.jpg",
  "rating": "8.7",
  "rawFields": {
    "author": [
      "Dan Erickson",
    ],
    "cast": [
      "Adam Scott",
      "Britt Lower",
    ],
    "community-rating": 87,
    "community-rating-provider": "TMDB",
    "community-votes": 3100,
    "count": 1,
    "favorite": true,
    "finished": "2022-04-08",
    "genres": [
      "Drama",
      "Mystery",
    ],
    "integration-id": "95396",
    "integration-provider": "tmdb",
    "owned": "digital",
    "poster": "https://cdn.example/severance.jpg",
    "poster-b": "https://cdn.example/severance-wide.jpg",
    "rating": 8.7,
    "released": "2022-02-18",
    "repeatable": true,
    "runtime": "55 min",
    "started": "2022-03-01",
    "status": "watching",
    "synopsis": "Work life balance, literally.",
    "tags": [
      "rewatch",
    ],
    "title": "Severance",
    "type": "movie",
    "url": "https://www.themoviedb.org/tv/95396",
    "user-rating": 7,
    "year": 2022,
  },
  "relatedMedia": [
    {
      "path": "Library/Dune.md",
      "title": "Dune",
      "type": "book",
    },
  ],
  "releaseDate": "2022-02-18",
  "repeatable": true,
  "runtime": "55 min",
  "sourceUrl": "https://www.themoviedb.org/tv/95396",
  "started": "2022-03-01",
  "status": "watching",
  "summary": "Work life balance, literally.",
  "tags": [
    "rewatch",
  ],
  "type": "movie",
  "userRating": 7,
  "year": 2022,
}
`;

exports[`VideoService round trip > writes every editable TV field, clearing legacy spellings 1`] = `
{
  "author": [
    "Dan Erickson",
    "Ben Stiller",
  ],
  "cast": [
    "Adam Scott",
    "Britt Lower",
    "Zach Cherry",
  ],
  "community-rating": 88,
  "community-rating-provider": "TMDB",
  "community-votes": 3300,
  "count": 2,
  "episode-current": 10,
  "episodes": 10,
  "favorite": false,
  "finished": "2025-03-21",
  "genres": [
    "drama",
    "sci-fi",
  ],
  "integration-id": "95396",
  "integration-provider": "tmdb",
  "networks": [
    "apple tv",
    "apple tv+",
  ],
  "owned": "physical",
  "poster": "https://cdn.example/severance.jpg",
  "poster-b": "https://cdn.example/new-wide.jpg",
  "rating": "8.9",
  "released": "2025-01-17",
  "repeatable": false,
  "runtime": "52 min",
  "season-current": 2,
  "season-data": [
    {
      "episode-current": 9,
      "episodes": 9,
      "id": "season-1",
      "kind": "season",
      "season-number": 1,
      "status": "completed",
      "title": "Season 1",
    },
    {
      "episode-current": 4,
      "episodes": 10,
      "id": "season-2",
      "kind": "season",
      "season-number": 2,
      "status": "watching",
      "title": "Season 2",
    },
  ],
  "season-id-current": "season-2",
  "seasons": 3,
  "started": "2025-01-17",
  "status": "completed",
  "synopsis": "Back to Lumon.",
  "tags": [
    "rewatch",
    "favorite",
  ],
  "title": "Severance II",
  "type": "tv",
  "url": "https://www.themoviedb.org/tv/95396-severance",
  "user-rating": 6,
  "year": 2022,
}
`;

exports[`VideoService round trip > writes every editable movie field, clearing legacy spellings 1`] = `
{
  "author": [
    "Dan Erickson",
    "Ben Stiller",
  ],
  "cast": [
    "Adam Scott",
    "Britt Lower",
    "Zach Cherry",
  ],
  "community-rating": 88,
  "community-rating-provider": "TMDB",
  "community-votes": 3300,
  "count": 2,
  "favorite": false,
  "finished": "2025-03-21",
  "genres": [
    "drama",
    "sci-fi",
  ],
  "integration-id": "95396",
  "integration-provider": "tmdb",
  "owned": "physical",
  "poster": "https://cdn.example/severance.jpg",
  "poster-b": "https://cdn.example/new-wide.jpg",
  "rating": "8.9",
  "released": "2025-01-17",
  "repeatable": false,
  "runtime": "52 min",
  "started": "2025-01-17",
  "status": "completed",
  "synopsis": "Back to Lumon.",
  "tags": [
    "rewatch",
    "favorite",
  ],
  "title": "Severance II",
  "type": "movie",
  "url": "https://www.themoviedb.org/tv/95396-severance",
  "user-rating": 6,
  "year": 2022,
}
`;
